# agentmagnet

./: .env.example  .gitignore  CLA.md  Dockerfile  LICENSE  README.md  docker-compose.yml  render.yaml  server.json
.cursor/rules/: agent-magnet.mdc
.github/: CONTRIBUTING.md
.github/workflows/: cla.yml
.well-known/mcp/: server-card.json
migrations/: 0001_init.sql  0002_api_key_metadata.sql  0003_team_registry.sql  0004_api_key_plan_check.sql  0005_usage_events_team_index.sql  0006_usage_events_key_id.sql  0007_memory_history.sql  0008_hash_expiration.sql
proxy/: auth.py  main.py  test_aggregate_store.py
sdk/: README.md  pyproject.toml  requirements.txt
sdk/magnet/: __init__.py  aggregate_store.py  auth.py  classifier.py  cli.py  client.py  episodic_store.py  hosted_client.py  http_server.py  knowledge_store.py  local_embeddings.py  local_extractor.py  local_store.py  mcp_config_example.json  mcp_server.py  memory_orchestrator.py  postgres_store.py  project_store.py  reflector.py  signals.py  store.py  team_backend.py  team_permissions.py  team_store.py  tier.py  usage_counter.py
sdk/magnet/hooks/: claude_hook_example.json  save_session.py
sdk/tests/: test_buffer.py  test_classifier.py  test_cli.py  test_episodic_store.py  test_local_embeddings.py  test_memory_orchestrator.py  test_package_metadata.py  test_router.py  test_storage_backends.py
