[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-magnet"
version = "0.1.25"
description = "Self-learning memory infrastructure for AI products"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Zelal Helin Akdoğan", email = "contact@agentmagnet.app"}
]
license = {text = "MIT"}
keywords = ["ai", "memory", "llm", "agents", "mcp"]
dependencies = [
    "fastapi",
    "redis",
    "litellm",
    "mcp",
    "qdrant-client",
    "neo4j",
    "python-dotenv",
    "sentence-transformers>=2.2",
]

[project.urls]
Homepage = "https://agentmagnet.app"
Repository = "https://github.com/helinakdogan/magnet-gateway"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio"]

[project.scripts]
agent-magnet = "magnet.cli:main"
agent-magnet-mcp = "magnet.mcp_server:main"
agent-magnet-hook = "magnet.hooks.save_session:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["magnet*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
