[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-magnet"
version = "0.1.27"
description = "Self-learning memory infrastructure for AI products"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Zelal Helin Akdoğan", email = "contact@agentmagnet.app"}
]
license = {text = "MIT"}
keywords = ["ai", "memory", "llm", "agents", "mcp"]
dependencies = [
    "fastapi",
    "redis",
    "litellm",
    "mcp",
    "qdrant-client",
    "neo4j",
    "python-dotenv",
    "sentence-transformers>=2.2",
    "PyJWT[crypto]>=2.8",
    "cryptography>=42.0",
]

[project.urls]
Homepage = "https://agentmagnet.app"
Repository = "https://github.com/helinakdogan/agentmagnet"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio"]
postgres = ["psycopg[binary]>=3.1", "psycopg_pool>=3.2"]

[project.scripts]
agent-magnet = "magnet.cli:main"
agent-magnet-mcp = "magnet.mcp_server:main"
agent-magnet-http = "magnet.http_server:main"
agent-magnet-hook = "magnet.hooks.save_session:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["magnet*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
